<resources>
    <string name="successful">Successfully marked as favourites</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="api_key">AIzaSyDVoMO_xVCHLbv2ozuDMfEK5jq9IyZ_iwI</string>
    <string name="app_name">Treatz Asia</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_app_id">674632155971845</string>
    <string name="facebook_app_id_test">175703936145004</string>
    <string name="error_passwords_do_not_match">Passwords do not match.</string>
    <string name="error_could_not_connect">Could not connect to server. Please try again later.</string>
    <string name="error_cannot_create_account">Account already exists!</string>
    <string name="error_cannot_sign_in">Please provide correct Email and Password</string>
    <string name="crash_toast_text">Sorry for inconvenience, we will get this issue fixed!</string>
    <string name="msg_connection_failed">Error! Connection to server failed.</string>
    <string name="msg_connection_error">Please check your internet connection</string>
    <string name="common.months">months</string>
    <string name="common.weeks">weeks</string>
    <string name="common.days">days</string>
    <string name="common.hrs">hrs</string>
    <string name="common.mins">mins</string>
    <string name="common.secs">secs</string>
    <string name="common.ago">ago</string>
    <string name="typeface_not_found">Typeface %$1 not found, or could not be loaded.
        Showing default typeface.</string>
    <string name="app">AnyTextView</string>
    <string name="assets_fonts_folder">fonts/</string>
    <string name="txt_enter_phone_no">Enter Phone No.</string>
    <string name="txt_register_text">Verificaion process is required to verify the phone no.</string>
    <string name="message_quit">Are you sure you want to exit?</string>
    <string name="message_wait">Please wait while data is loading.</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="click_here">  Click Here</string>
    <string name="imgdesc_signup">Sign Up</string>
    <string name="imgdesc_signin">Sign In</string>
    <string name="back_to_login"><u>Back to Login</u></string>
    <string name="remember_me">remember me</string>
    <string name="login">Login</string>
    <string name="user_name">User Name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="categories">Categories</string>
    <string name="messages">Messages</string>
    <string name="settings">Settings</string>
    <string name="search_hint">Search Ads, User or Category</string>
    <string name="password_sent">Your password will be sent to your \nemail address</string>
    <string name="change_password">Change Password</string>
    <string name="reason_for_rejection">REASON</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="via_email">Via Email</string>
    <string name="via_sms">Via SMS</string>
    <string name="tell_a_friend">TELL A FRIEND</string>
    <string name="contact_email">contact@voltas.com</string>
    <string name="contact_phone">5555 555 555</string>
    <string name="enter_text">Enter Text</string>
    <string name="you_paid">YOU PAID</string>
    <string name="tap_to_rate">TAP A STAR TO RATE DRIVER</string>
    <string name="contact_address">Columbus College of Arts, New York</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing publishing so
        including versions of Lorem Ipsum. https://www.google.com</string>
    <string name="lorem_ipsum1">Lorem Ipsum is simply dummy text of the printing publishing so
        including versions of Lorem Ipsum,Lorem Ipsum is simply dummy text of the printing publishing so
        including versions of Lorem Ipsum,Lorem Ipsum is simply dummy text of the printing publishing so
        including versions of Lorem Ipsum.</string>
    <string name="this_is_login_fragment">This is Login Fragment</string>
    <string name="default_hint_text">Tap here to set location</string>
    <string name="connection_lost">No Internet Found</string>
    <string name="e_voucher">E-Voucher</string>
    <string name="events">Events</string>
    <string name="rewards">Rewards</string>
    <string name="account">Account</string>
    <string name="expires_on">Expires On:</string>
    <string name="get_a_voucher">Get A Voucher</string>
    <string name="no_data">No Data to Show</string>
    <string name="Home">Home</string>
    <string name="flashsale">Flash Sale</string>
    <string name="Events">Events</string>
    <string name="all">All</string>
    <string name="dining">Dining</string>
    <string name="fashion">Fashion</string>
    <string name="hotels">Hotels</string>
    <string name="restuarants">Restuarants</string>
    <string name="shopping">Shopping</string>
    <string name="apply">Apply</string>
    <string name="filter">Filter</string>
    <string name="buy_ticket">Buy Ticket</string>
    <string name="details">Details</string>
    <string name="enter_your">Enter Your</string>
    <string name="phone_number">Phone Number</string>
    <string name="we_ll_send_you_a_code_to_confirm_your_number">We\'ll send you a code to confirm your number</string>
    <string name="submit">Submit</string>
    <string name="verification_code">Verification Code</string>
    <string name="did_not_get_code_yet_wait_for">Did not get code yet? wait for</string>
    <string name="verify_your">Verify Your</string>
    <string name="a_verification_code_has_been_sent_to_your_mobile_phone">A verification code has been sent to your mobile phone.</string>
    <string name="correct_verification_code">Please insert correct verification code.</string>
    <string name="enter_verification_code">Please enter verification code.</string>
    <string name="wallet">Wallet</string>
    <string name="Wallet">WALLET</string>
    <string name="earned_credit">Earned Credit</string>
    <string name="used_credit">Used Credit</string>
    <string name="total_available_credit">Total Available Credit</string>
    <string name="thomas_nolan_kaszas_ii_5322_otter_lane_middleberge_fl_32068">Thomas Nolan Kaszas II 5322 Otter Lane Middleberge FL 32068</string>
    <string name="_123_456_789">+123 456 789</string>
    <string name="jamescameron_samplemail_com">jamescameron@samplemail.com</string>
    <string name="james_cameron">James Cameron</string>
    <string name="update">Update</string>
    <string name="my_profile">My Profile</string>
    <string name="subscribed_plans">Subscribed Plans</string>
    <string name="my_subscription">My Subscription</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="contact_us">Contact Us</string>
    <string name="logout">Logout</string>
    <string name="resend_code">Resend Code</string>
    <string name="type_your_message_here">Type your message here…</string>
    <string name="about_app">About App</string>
    <string name="sign_up">Sign Up</string>
    <string name="full_name_Passport">Full Name as in NRIC/Passport</string>
    <string name="email">Email</string>
    <string name="enter_referral_code">Enter Referral Code (Optional)</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="next">Next</string>
    <string name="password_length_alert">Password should be 6 or more characters long</string>
    <string name="mismatch_password">Password does not match.</string>
    <string name="mismatch_confirm_password">Confirm Password does not match password.</string>
    <string name="sub_plan">Subscription Plan</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="current_password">Current Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="proceed">Proceed</string>
    <string name="remaining_amount">Remaining Amount</string>
    <string name="you_have_successfully_redeemed_the_voucher">You have successfully redeemed the voucher</string>
    <string name="please_pay_the_remaining_amount">Please pay the remaining amount</string>
    <string name="_20">$20</string>
    <string name="_24th_sep_2017">24th Sep 2017</string>
    <string name="_12th_sep_2017">12th Sep 2017</string>
    <string name="_100">$100</string>
    <string name="international_exhibition">International Exhibition</string>
    <string name="_12213">#12213</string>
    <string name="history">My History</string>
    <string name="notifications">Notifications</string>
    <string name="ticket_id">Ticket ID</string>
    <string name="event">Event</string>
    <string name="amount_paid">Amount Paid</string>
    <string name="purchase_date">Purchase Date</string>
    <string name="event_date">Event Date</string>
    <string name="redemption">Redemption</string>
    <string name="purchase">Purchase</string>
    <string name="won">Won</string>
    <string name="redemption_date">Redemption Date:</string>
    <string name="amount_remaining">Amount Remaining:</string>
    <string name="date">Date</string>
    <string name="myHistory">My History</string>
    <string name="History">History</string>
    <string name="want_more">Want More</string>
    <string name="treatz_from_us">Treatz From Us</string>
    <string name="copy">Copy</string>
    <string name="intite_friends">Invite Friends</string>
    <string name="invite_friends_message">Invite friends to join Treatz.You\'ll get <b>SGD 10</b> off each of your next subscription fee when they start using treatz</string>
    <string name="paypal">Paypal</string>
    <string name="use_cash">Use Cash</string>
    <string name="samsung_pay">Samsung Pay</string>
    <string name="use_credits">Use Credits</string>
    <string name="_10">($10)</string>
    <string name="use_credit_only">Use Credit Only</string>
    <string name="tap_to_redeem">Tap to Redeem</string>
    <string name="cashback">Cash Voucher</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="indonesian">Indonesian</string>
    <string name="malai">Malay</string>
    <string name="select_package">Select Package</string>
    <string name="skip">Skip</string>
    <string name="over_ride_commission_on_members_n_3_configurable">Over-ride commission on members  (3% - Configurable)</string>
    <string name="to_get_rewards_kind_of_lucky_draw_concept_chances">To get Rewards(Kind of lucky draw concept) chances</string>
    <string name="higher_referrel_fee_when_refer_to_a_member_ngive_pre_define_vouchers_to_member">Higher referral fee when refer to a member Give pre-define vouchers to member</string>
    <string name="_300">300</string>
    <string name="sgh">SGH</string>
    <string name="regular">REGULAR</string>
    <string name="members">MEMBERS</string>
    <string name="prestige">PRESTIGE</string>
    <string name="partners">PARTNERS</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="on">on</string>
    <string name="at">at</string>
    <string name="voucher">Voucher</string>
    <string name="font_normal">Poppins-Regular_1.ttf</string>
    <string name="flash_sale">Flash Sale</string>
    <string name="promo_code">Promo Code</string>
    <string name="vouchers">Vouchers</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="website_optional">Website (Optional)</string>
    <string name="additional_comments">Additional Comments</string>
</resources>