<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg1"
    android:orientation="vertical"
    android:paddingEnd="@dimen/x20"
    android:paddingStart="@dimen/x20">

    <com.app.usertreatzasia.ui.views.AnyEditTextView
        android:id="@+id/txtRestaurantName"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x45"
        android:layout_marginTop="@dimen/x20"
        android:background="@drawable/rounded_white"
        android:ellipsize="end"
        android:gravity="center_vertical"
        android:hint="@string/restaurant_name"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:maxLines="2"
        android:paddingStart="@dimen/x12"
        android:textColor="@color/black"
        android:textSize="@dimen/x14"
        app:typeface="@string/font_normal" />

    <com.app.usertreatzasia.ui.views.AnyEditTextView
        android:id="@+id/txtWebsite"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x45"
        android:layout_marginTop="@dimen/x10"
        android:background="@drawable/rounded_white"
        android:ellipsize="end"
        android:gravity="center_vertical"
        android:hint="@string/website_optional"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:maxLines="2"
        android:paddingStart="@dimen/x12"
        android:textColor="@color/black"
        android:textSize="@dimen/x14"
        app:typeface="@string/font_normal" />

    <com.app.usertreatzasia.ui.views.AnyEditTextView
        android:id="@+id/txtComment"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x160"
        android:layout_marginTop="@dimen/x10"
        android:background="@drawable/rounded_white"
        android:gravity="start"
        android:hint="@string/additional_comments"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:padding="@dimen/x10"
        android:textColor="@color/black"
        android:textSize="@dimen/x14"
        app:typeface="@string/font_normal" />


    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/x20"
        android:layout_marginTop="@dimen/x20"
        android:background="@drawable/button_golden"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/x18" />


</LinearLayout>