<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg1"
    android:orientation="vertical">

    <com.app.usertreatzasia.ui.views.AnyTextView
        android:id="@+id/txt_no_data"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="0.9"
        android:gravity="center"
        android:text="@string/no_data"
        android:textColor="@color/dark_grey"
        android:textSize="@dimen/x15"
        android:visibility="gone"
        app:typeface="@string/font_normal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/x2"
        android:layout_weight="0.8"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/category_bg"
            android:orientation="vertical"
            android:visibility="gone">

            <com.app.usertreatzasia.ui.views.AnyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/x15"
                android:text="@string/vouchers"
                android:textColor="@color/golden"
                android:textSize="@dimen/x17"
                app:typeface="@string/font_normal" />


        </LinearLayout>

        <CheckBox
            android:id="@+id/cb_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/x10"
            android:button="@drawable/selector_chkbox"
            android:checked="false"
            android:padding="@dimen/x10"
            android:text="@string/all"
            android:textColor="@color/white" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:alpha="0.5"
            android:background="@color/border_color" />

        <CheckBox
            android:id="@+id/cb_voucher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/x10"
            android:button="@drawable/selector_chkbox"
            android:checked="false"
            android:padding="@dimen/x10"
            android:text="@string/voucher"
            android:textColor="@color/white" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:alpha="0.5"
            android:background="@color/border_color" />

        <CheckBox
            android:id="@+id/cb_flash_sale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/x10"
            android:button="@drawable/selector_chkbox"
            android:checked="false"
            android:padding="@dimen/x10"
            android:text="@string/flash_sale"
            android:textColor="@color/white" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:alpha="0.5"
            android:background="@color/border_color" />

        <CheckBox
            android:id="@+id/cb_promo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/x10"
            android:button="@drawable/selector_chkbox"
            android:checked="false"
            android:padding="@dimen/x10"
            android:text="@string/promo_code"
            android:textColor="@color/white" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.9"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.8"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/category_bg"
                android:orientation="vertical"
                android:padding="@dimen/x10">

                <com.app.usertreatzasia.ui.views.AnyTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/categories"
                    android:textColor="@color/golden"
                    android:textSize="@dimen/x17"
                    app:typeface="@string/font_normal" />
            </LinearLayout>

            <ListView
                android:id="@+id/lv_filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scrollbars="none">

            </ListView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center">

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="match_parent"
                android:layout_height="@dimen/x40"
                android:layout_marginLeft="@dimen/x20"
                android:layout_marginRight="@dimen/x20"
                android:background="@drawable/button_golden"
                android:text="@string/apply"
                android:gravity="center"
                android:layout_gravity="center"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/x18" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>