<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_header"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x200"
            android:scaleType="fitXY"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/x10"
            android:layout_marginTop="@dimen/x15"
            android:orientation="horizontal">

            <com.app.usertreatzasia.ui.views.AnyTextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.4"
                android:alpha="0.8"
                android:gravity="center_vertical"
                android:text="@string/ticket_id"
                android:textColor="@color/black"
                android:textSize="@dimen/x15"
                app:typeface="Roboto-Regular.ttf" />

            <com.app.usertreatzasia.ui.views.AnyTextView
                android:id="@+id/txt_ticket_Id"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.8"
                android:gravity="center_vertical"
                android:text="@string/_12213"
                android:textSize="@dimen/x15"
                app:typeface="Roboto-Regular.ttf" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/x10"
            android:layout_marginTop="@dimen/x12"
            android:orientation="horizontal">

            <com.app.usertreatzasia.ui.views.AnyTextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.4"
                android:alpha="0.8"
                android:gravity="center_vertical"
                android:text="@string/event"
                android:textColor="@color/black"
                android:textSize="@dimen/x15"
                app:typeface="Roboto-Regular.ttf" />

            <com.app.usertreatzasia.ui.views.AnyTextView
                android:id="@+id/txt_event"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.8"
                android:gravity="center_vertical"
                android:maxLines="2"
                android:text="@string/international_exhibition"
                android:textSize="@dimen/x15"
                app:typeface="Roboto-Regular.ttf" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/x10"
            android:layout_marginTop="@dimen/x12"
            android:orientation="horizontal">

            <com.app.usertreatzasia.ui.views.AnyTextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.4"
                android:alpha="0.8"
                android:gravity="center_vertical"
                android:text="@string/amount_paid"
                android:textColor="@color/black"
                android:textSize="@dimen/x15"
                app:typeface="Roboto-Regular.ttf" />

            <com.app.usertreatzasia.ui.views.AnyTextView
                android:id="@+id/txt_amount_paid"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.8"
                android:gravity="center_vertical"
                android:text="@string/_100"
                android:textSize="@dimen/x15"
                app:typeface="Roboto-Regular.ttf" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/x10"
            android:layout_marginTop="@dimen/x12"
            android:orientation="horizontal">

            <com.app.usertreatzasia.ui.views.AnyTextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.4"
                android:alpha="0.8"
                android:gravity="center_vertical"
                android:text="@string/purchase_date"
                android:textColor="@color/black"
                android:textSize="@dimen/x15"
                app:typeface="Roboto-Regular.ttf" />

            <com.app.usertreatzasia.ui.views.AnyTextView
                android:id="@+id/txt_purchase_date"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.8"
                android:gravity="center_vertical"
                android:text="@string/_12th_sep_2017"
                android:textSize="@dimen/x15"
                app:typeface="Roboto-Regular.ttf" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/x10"
            android:layout_marginTop="@dimen/x12"
            android:orientation="horizontal">

            <com.app.usertreatzasia.ui.views.AnyTextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.4"
                android:alpha="0.8"
                android:gravity="center_vertical"
                android:text="@string/event_date"
                android:textColor="@color/black"
                android:textSize="@dimen/x15"
                app:typeface="Roboto-Regular.ttf" />

            <com.app.usertreatzasia.ui.views.AnyTextView
                android:id="@+id/txt_event_date"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.8"
                android:gravity="center_vertical"
                android:text="@string/_24th_sep_2017"
                android:textSize="@dimen/x15"
                app:typeface="Roboto-Regular.ttf" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/x1"
            android:layout_marginTop="@dimen/x15"
            android:alpha="0.1"
            android:background="@color/light_grey" />

        <ImageView
            android:id="@+id/iv_barcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/x20"
            android:layout_marginBottom="@dimen/x20"
            android:src="@drawable/code" />

    </LinearLayout>
</ScrollView>