<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_productImage"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x200"
            android:scaleType="fitXY" />

        <com.app.usertreatzasia.ui.views.AnyTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/x5"
            android:layout_marginTop="@dimen/x15"
            android:alpha="0.8"
            android:gravity="center"
            android:text="@string/you_have_successfully_redeemed_the_voucher"
            android:textColor="@color/black"
            android:textSize="@dimen/x15"
            app:typeface="Roboto-Regular.ttf" />

        <com.app.usertreatzasia.ui.views.AnyTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:alpha="0.8"
            android:gravity="center"
            android:text="@string/please_pay_the_remaining_amount"
            android:textColor="@color/black"
            android:textSize="@dimen/x15"
            app:typeface="Roboto-Regular.ttf" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/x1"
            android:layout_marginBottom="@dimen/x20"
            android:layout_marginTop="@dimen/x20"
            android:alpha="0.1"
            android:background="@color/light_grey" />

        <com.app.usertreatzasia.ui.views.AnyTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:alpha="0.8"
            android:gravity="center"
            android:text="@string/remaining_amount"
            android:textColor="@color/black"
            android:textSize="@dimen/x17"
            app:typeface="Roboto-Regular.ttf" />

        <com.app.usertreatzasia.ui.views.AnyTextView
            android:id="@+id/tv_remaining_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:alpha="0.8"
            android:gravity="center"
            tools:text="@string/_20"
            android:textColor="@color/golden"
            android:textSize="@dimen/x40"
            app:typeface="Roboto-Regular.ttf" />

        <Button
            android:id="@+id/btn_proceed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/x20"
            android:layout_marginLeft="@dimen/x15"
            android:layout_marginRight="@dimen/x15"
            android:layout_marginTop="@dimen/x30"
            android:background="@drawable/button_golden"
            android:text="@string/proceed"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/x18"
            android:visibility="gone"/>

    </LinearLayout>
</ScrollView>