<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/bg1"
              android:orientation="vertical">


    <CheckBox
        android:id="@+id/rbtn_paypal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x50"
        android:layout_marginStart="@dimen/x5"
        android:button="@drawable/checkbox_drawable"
        android:checked="true"
        android:paddingStart="@dimen/x10"
        android:text="@string/paypal"
        android:textColor="@color/white"
        android:textSize="@dimen/s15"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/x1"
        android:alpha="0.8"
        android:background="@color/border_color"/>

    <CheckBox
        android:id="@+id/rbtn_samsung"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x50"
        android:layout_marginStart="@dimen/x5"
        android:button="@drawable/checkbox_drawable"
        android:checked="false"
        android:enabled="false"
        android:paddingStart="@dimen/x10"
        android:text="@string/use_credits"
        android:textColor="@color/white"
        android:textSize="@dimen/s15"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/x1"
        android:alpha="0.8"
        android:background="@color/border_color"/>

    <Button
        android:id="@+id/btn_proceed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/x15"
        android:layout_marginStart="@dimen/x15"
        android:layout_marginTop="@dimen/x20"
        android:background="@drawable/button_golden"
        android:text="@string/proceed"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/s15"/>


</LinearLayout>